Change naming convention

--- a/5_feature_engineering.ipynb
+++ b/5_feature_engineering.ipynb
@@ -40,7 +40,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Helper script(s)\n",
-    "from scripts.functions import get_line_equation, removeOutliers\n",
+    "from scripts.functions import get_line_equation, remove_outliers\n",
     "\n",
     "# Hide all warnings in ipython\n",
     "import warnings\n",
@@ -33350,8 +33350,8 @@
    "outputs": [],
    "source": [
     "# Removing the outliers:\n",
-    "removeOutliers(known_dataset, columns_numeric)\n",
-    "removeOutliers(unknown_dataset, columns_numeric)"
+    "remove_outliers(known_dataset, columns_numeric)\n",
+    "remove_outliers(unknown_dataset, columns_numeric)"
    ]
   },
   {
@@ -33882,7 +33882,7 @@
        "        [13.64, 53.4 , 36.  , ...,  4.89,  0.2 ,  3.  ],\n",
        "        [13.95, 53.57, 33.  , ...,  8.12,  0.13,  3.  ],\n",
        "        [13.62, 53.13, 49.  , ...,  4.78,  0.21,  3.  ]]),\n",
-       " SelectKBest(k='all', score_func=<function f_regression at 0x00000290B256B0D0>))"
+       " SelectKBest(k='all', score_func=<function f_regression at 0x000002D728582D30>))"
       ]
      },
      "execution_count": 51,
