Add images and edit text

--- a/6_predictive_modelling_with_pycaret.ipynb
+++ b/6_predictive_modelling_with_pycaret.ipynb
@@ -3312,7 +3312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how the R2 in the final_lightgbm has increased to `0.6173` from `0.4567`, even though the model is same. This is because the final_catboost variable is trained on the complete dataset including the test/hold-out set."
+    "Notice how the R2 in the final_catboost has increased to `0.6173` from `0.4567`, even though the model is same. This is because the final_catboost variable is trained on the complete dataset including the test/hold-out set."
    ]
   },
   {
