--- a/5_feature_engineering.ipynb
+++ b/5_feature_engineering.ipynb
@@ -807,7 +807,7 @@
    ],
    "source": [
     "# To answer the question of how feature f5 can be categorised into exactly 5 features, let's first look again at the distributions with the function describe().\n",
-    "# We see that max is almost perfectly equal to 8.0409000., so we divide everything into 5 logical ticks: 1.6, 3,2, 4.8, 6.4 and 8.0409000.\n",
+    "# We see that max is almost perfectly equal to 8.0409000, so we divide everything into 5 logical ticks: 1.6, 3.2, 4.8, 6.4 and 8.0409000.\n",
     "known_dataset.f5.describe()"
    ]
   },
@@ -1389,7 +1389,7 @@
     }
    ],
    "source": [
-    "# Check if the new category f5_cat is created successfully for known dataset.\n",
+    "# Check if the new category f5_cat is created successfully for unknown dataset.\n",
     "unknown_dataset.head(10)"
    ]
   },
